RESOLVED FIXED38697
REGRESSION (r58299): Replying on reddit.com no longer works
https://bugs.webkit.org/show_bug.cgi?id=38697
Summary REGRESSION (r58299): Replying on reddit.com no longer works
Alexey Proskuryakov
Reported 2010-05-06 15:14:03 PDT
STEPS TO REPRODUCE: 1) Open http://www.reddit.com/r/AskReddit/comments/a7pud/whats_your_favorite_ted_talk/ 2) Click the "Reply" link (you might need to be logged in for this). EXPECTED RESULTS: A text area opens for you to write a comment ACTUAL: It doesn't. Alternatively (if you don't have a reddit account), just click "Register" link. <rdar://problem/7931177>
Attachments
reduced test case (166 bytes, text/html)
2010-05-06 15:17 PDT, Alexey Proskuryakov
no flags
naive fix (3.91 KB, patch)
2010-05-06 16:42 PDT, Alexey Proskuryakov
ggaren: review+
Alexey Proskuryakov
Comment 1 2010-05-06 15:15:07 PDT
This happens because document.querySelectorAll(".login-popup:first") no longer raises an exception.
Alexey Proskuryakov
Comment 2 2010-05-06 15:17:50 PDT
Created attachment 55306 [details] reduced test case
Alexey Proskuryakov
Comment 3 2010-05-06 16:35:09 PDT
I think that this goes both ways. The new first, left and right classes are allowed outside @page rules, but also, other classes are allowed inside page rules, but they shouldn't. Correct (from the spec): page : PAGE_SYM S* IDENT? pseudo_page? S* '{' S* [ declaration | margin ]? [ ';' S* [ declaration | margin ]? ]* '}' S* ; pseudo_page : ':' [ "left" | "right" | "first" ] ; Wrong (CSSGrammar.y): page: PAGE_SYM maybe_space page_selector maybe_space ... page_selector: IDENT { ... | IDENT pseudo { ... | pseudo { ... | /* empty */ { Note that any pseudo is allowed in page rules by the grammar here, not just pseudo_page.
Alexey Proskuryakov
Comment 4 2010-05-06 16:42:25 PDT
Created attachment 55318 [details] naive fix
Geoffrey Garen
Comment 5 2010-05-06 16:50:02 PDT
Comment on attachment 55318 [details] naive fix r=me
Alexey Proskuryakov
Comment 6 2010-05-06 17:04:39 PDT
Committed <http://trac.webkit.org/changeset/58922>. Add a FIXME comment, as suggested by Mitz.
Darin Adler
Comment 7 2010-05-06 17:14:49 PDT
Comment on attachment 55318 [details] naive fix > + document.querySelectorAll(".login-popup:first"); I'd be happier if you included test cases for all three of the affected pseudo classes.
Yuzo Fujishima
Comment 8 2010-05-06 18:04:39 PDT
Sorry for the regression and thank you for the fix.
Yuzo Fujishima
Comment 9 2010-05-06 18:07:19 PDT
I'll address the grammar issue under a separate bug.
Alexey Proskuryakov
Comment 10 2010-05-07 12:17:15 PDT
*** Bug 38729 has been marked as a duplicate of this bug. ***
visnu pitiyanuvath
Comment 11 2010-05-07 15:06:36 PDT
*** Bug 38499 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 12 2010-05-09 16:47:57 PDT
*** Bug 38804 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.