        Reviewed by Geoff Garen.

https://bugs.webkit.org/show_bug.cgi?id=38697
        REGRESSION (r58299): Replying on reddit.com no longer works

        * css/CSSSelector.cpp: (WebCore::CSSSelector::extractPseudoType): Don't recognize :first,
        :left and :right. The aren't allowed in all contexts, and properly implementing them is out
        of scope for this regression fix.



Canonical link: https://commits.webkit.org/50169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58922 268f45cc-cd09-0410-ab3c-d52691b4dbfc